"""
'Квадраты' кнопок игры
"""

import pygame


pygame.init()


class StrategyRects:
    """
    'Квадраты' кнопок игры
    Основной класс для этой задачи
    """
    
    def __init__(self):
        pass

