"""
Обнуление игровых результатов (специальная кнопка)
"""

import pygame


pygame.init()


class Restart:
    """
    Кнопка перезапуска игры
    """
    
    def __init__(self):
        pass
    
    def restart(self):
        """
        Основной метод класса: перезапуск игры
        """

