@startuml "Strategy game"


title "Игра-стратегия: полная схема программы"

class Main

class MainMenu {
    - None play_music()
    - None exit_game()
    + None draw_menu()
    + None menu_buttons()
    - None run()
}

class Settings {

}

class StrategyMain {

}

class StrategySQLAlchemy {
    + None create_table()
    + None insert_in_table()
    + None update_table()
}

class StrategyPause {

}

class StrategyNavigation {

}

class StrategyRects {
    
}

class Restart {

}

abstract Resources
abstract Buildings
abstract MiniGames

Resources --> Wood
Resources --> Food
Resources --> Iron

Restart --> MainMenu
Main --> MainMenu

StrategyMain <-- StrategyNavigation
StrategyMain <-- StrategyPause
StrategyMain <-- StrategySQLAlchemy
StrategyMain <-- StrategyShop
StrategyMain <-- StrategyDraw
StrategyMain <-- StrategyRects

@enduml